# suggestions-collector

./: .gitignore  Makefile  README.md  ideas.txt  pyproject.toml  result.txt
predictions_collector/: async_func_example.py  chatgpt.py  main.py
suggestions_collector/: collector.py  get_videos.py  main.py  parsing.py  tag_cleaner.py  url_builder.py  youtube_tag_parser.py
tags_grabber/: main.py
tests/: test_main.py
