[tool.poetry]
name = "youtube-video-tags-grabber"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
readme = "README.md"
packages = [{include = "tags_grabber"}]

[tool.poetry.dependencies]
python = "3.8.14"
beautifulsoup4 = "^4.11.1"
youtube-search-python = "^1.6.6"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
grequests = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
